--- a/O!FMS-V0/packages.config
+++ b/O!FMS-V0/packages.config
@@ -6,5 +6,5 @@
   <package id="Rebex.Common" version="2.5.6874" targetFramework="net45" />
   <package id="Rebex.Networking" version="3.5.6874" targetFramework="net45" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net45" />
-  <package id="Telnet" version="0.9.0-beta0001" targetFramework="net45" />
+  <package id="Telnet" version="0.8.3" targetFramework="net45" />
 </packages>
