--- a/O!FMS-V0/O!FMS-V0.vbproj
+++ b/O!FMS-V0/O!FMS-V0.vbproj
@@ -57,6 +57,9 @@
       <HintPath>..\packages\LiteGuard.1.1.0\lib\net35\LiteGuard.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic.PowerPacks, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PrimS.Telnet, Version=0.8.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Telnet.0.8.3\lib\net45\PrimS.Telnet.dll</HintPath>
     </Reference>
@@ -122,13 +125,13 @@
     <Compile Include="Match_Generator.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="OFMS\Field\AccessPoint.vb" />
-    <Compile Include="OFMS\Field\Field.vb" />
-    <Compile Include="OFMS\Field\Match.vb" />
-    <Compile Include="OFMS\Field\Switch.vb" />
-    <Compile Include="OFMS\Field\Team.vb" />
-    <Compile Include="OFMS\Field\Team_Networks.vb" />
-    <Compile Include="OFMS\Field\ViewMarqUpdater.vb" />
+    <Compile Include="Network\AccessPoint.vb" />
+    <Compile Include="Field\Field.vb" />
+    <Compile Include="Field\Match.vb" />
+    <Compile Include="Network\Switch.vb" />
+    <Compile Include="Field\Team.vb" />
+    <Compile Include="Field\Team_Networks.vb" />
+    <Compile Include="Field\ViewMarqUpdater.vb" />
     <Compile Include="Other\CRC.vb" />
     <Compile Include="Communication\PLC_Comms_Server.vb" />
     <Compile Include="OFMS-MainForm.vb">
@@ -167,6 +170,7 @@
     <Compile Include="Startup_Screen.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="TBA\Tba.vb" />
     <Compile Include="TeamAdder.Designer.vb">
       <DependentUpon>TeamAdder.vb</DependentUpon>
     </Compile>
@@ -231,7 +235,7 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
-    <None Include="OFMS\Field\access_point.cfg" />
+    <None Include="Network\access_point.cfg" />
     <None Include="packages.config" />
     <None Include="_O_FMSDataSet.xsc">
       <DependentUpon>_O_FMSDataSet.xsd</DependentUpon>
@@ -259,7 +263,7 @@
   <ItemGroup>
     <Content Include="License.txt" />
     <Content Include="ofms logo.ico" />
-    <Content Include="OFMS\Field\APTemplate.txt" />
+    <Content Include="Network\APTemplate.txt" />
     <Content Include="OFMS\Sounds\fog-blast.wav" />
     <None Include="Resources\Comet-SoundBible.com-1256431940.wav" />
     <None Include="Resources\CometSound.mp3" />
