--- a/O!FMS-V0/packages.config
+++ b/O!FMS-V0/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EasyModbusTCP" version="5.0.0" targetFramework="net45" />
   <package id="LiteGuard" version="1.1.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net45" />
   <package id="Opc.UaFx.Advanced" version="2.5.2.5" targetFramework="net45" />
   <package id="Rebex.Common" version="2.5.6874" targetFramework="net45" />
   <package id="Rebex.Networking" version="3.5.6874" targetFramework="net45" />
