--- a/O!FMS-V0/O!FMS-V0.vbproj
+++ b/O!FMS-V0/O!FMS-V0.vbproj
@@ -125,6 +125,12 @@
     <Compile Include="Match_Generator.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="MD5.Designer.vb">
+      <DependentUpon>MD5.vb</DependentUpon>
+    </Compile>
+    <Compile Include="MD5.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Network\AccessPoint.vb" />
     <Compile Include="Field\Field.vb" />
     <Compile Include="Field\Match.vb" />
@@ -200,6 +206,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Match_Generator.resx">
       <DependentUpon>Match_Generator.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MD5.resx">
+      <DependentUpon>MD5.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="OFMS-MainForm.resx">
       <DependentUpon>OFMS-MainForm.vb</DependentUpon>
