reformating the driver station control
So I can get rid of the sharing across files errors

--- a/O!FMS-V0/O!FMS-V0.vbproj
+++ b/O!FMS-V0/O!FMS-V0.vbproj
@@ -124,6 +124,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Communication\DriverStations.vb" />
+    <Compile Include="Communication\Field_Comms.vb" />
     <Compile Include="Field\Rankings.vb" />
     <Compile Include="Game\Field Lighting\Led_Colors.vb" />
     <Compile Include="Game\Field Lighting\Led_Controller.vb" />
