--- a/O!FMS-V0/O!FMS-V0.vbproj
+++ b/O!FMS-V0/O!FMS-V0.vbproj
@@ -123,7 +123,7 @@
     <Compile Include="AudianceDisplay.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Communication\DriverStations.vb" />
+    <Compile Include="Communication\2019DS.vb" />
     <Compile Include="Communication\Field_Comms.vb" />
     <Compile Include="Field\Rankings.vb" />
     <Compile Include="Game\Field Lighting\Led_Colors.vb" />
