--- a/O!FMS-V0/packages.config
+++ b/O!FMS-V0/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EasyModbusTCP" version="5.0.0" targetFramework="net45" />
+  <package id="iTextSharp" version="5.5.13.1" targetFramework="net45" />
   <package id="LiteGuard" version="1.1.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net45" />
   <package id="Opc.UaFx.Advanced" version="2.5.2.5" targetFramework="net45" />
