--- a/OpenFMS/OpenFMS.vbproj
+++ b/OpenFMS/OpenFMS.vbproj
@@ -52,6 +52,9 @@
       <HintPath>..\packages\EasyModbusTCP.5.5.0\lib\EasyModbus.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic.PowerPacks, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Renci.SshNet, Version=2016.1.0.0, Culture=neutral, PublicKeyToken=1cee9f8bde3db106, processorArchitecture=MSIL">
       <HintPath>..\packages\SSH.NET.2016.1.0\lib\net40\Renci.SshNet.dll</HintPath>
     </Reference>
@@ -118,7 +121,7 @@
     <Compile Include="Network\Switch.vb" />
     <Compile Include="Scoring\Scoring.vb" />
     <Compile Include="SQL\SQL.vb" />
-    <Compile Include="TBA\The Blue Alliance.vb" />
+    <Compile Include="TBA\TBA.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Event Setup.resx">
